[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scripts/WaveScreen.gd" type="Script" id=2]
[ext_resource path="res://scripts/Textbox.gd" type="Script" id=3]
[ext_resource path="res://scripts/CurrentItemPreview.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/OpenSans-Bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/graphics/ui/textbox.png" type="Texture" id=6]
[ext_resource path="res://resources/graphics/traps/no_money.png" type="Texture" id=7]
[ext_resource path="res://resources/graphics/ui/WavesScreen.png" type="Texture" id=8]
[ext_resource path="res://scenes/EnemySpawner.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/PyramidLevel.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/EnemyInfo.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=13]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="PyramidLevel0" parent="." instance=ExtResource( 10 )]
visible = true

[node name="Layout" parent="PyramidLevel0" index="0"]
collision_mask = 1
occluder_light_mask = 1
tile_data = PoolIntArray( 131075, 0, 65537, 131076, 0, 65538, 131077, 0, 6, 131078, 0, 2, 131079, 0, 2, 131080, 0, 2, 131081, 0, 2, 131082, 0, 2, 131083, 0, 2, 131084, 0, 2, 131085, 0, 2, 131086, 0, 196617, 131087, 0, 65539, 196611, 0, 131073, 196612, 0, 131074, 196613, 0, 131075, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 0, 131073, 196623, 0, 131075, 262147, 0, 131073, 262148, 0, 131074, 262149, 0, 131075, 262150, 1, 0, 262151, 0, 1, 262152, 0, 2, 262153, 0, 2, 262154, 0, 2, 262155, 0, 65541, 262156, 0, 3, 262157, 1, 0, 262158, 0, 196609, 262159, 0, 4, 327683, 0, 131073, 327684, 0, 131074, 327685, 0, 131075, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 0, 131072, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 0, 131072, 393219, 0, 131073, 393220, 0, 131074, 393221, 0, 131075, 393222, 1, 0, 393223, 0, 65537, 393224, 0, 65538, 393225, 0, 65539, 393226, 1, 0, 393227, 0, 131072, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 0, 131072, 458755, 0, 7, 458756, 0, 196610, 458757, 0, 196611, 458758, 1, 0, 458759, 0, 131073, 458760, 0, 131074, 458761, 0, 131075, 458762, 1, 0, 458763, 0, 131072, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 0, 131072, 524291, 0, 131072, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 0, 131073, 524296, 0, 131074, 524297, 0, 131075, 524298, 1, 0, 524299, 0, 196618, 524300, 0, 65538, 524301, 0, 65538, 524302, 0, 65538, 524303, 0, 196615, 589827, 0, 196612, 589828, 0, 2, 589829, 0, 2, 589830, 0, 2, 589831, 0, 196616, 589832, 0, 196610, 589833, 0, 196611, 589834, 1, 0, 589835, 0, 196609, 589836, 0, 196610, 589837, 0, 196610, 589838, 0, 196610, 589839, 0, 196611 )

[node name="TreasureChamber" parent="PyramidLevel0" index="1"]
position = Vector2( 3375, 1625 )

[node name="EnemySpawner" parent="PyramidLevel0" instance=ExtResource( 9 )]
position = Vector2( 2625, 2375 )

[node name="PyramidLevel1" parent="." instance=ExtResource( 10 )]
levelIndex = 1

[node name="Layout" parent="PyramidLevel1" index="0"]
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 0, 65537, 4, 0, 65538, 5, 0, 65538, 6, 0, 65538, 7, 0, 65538, 8, 0, 65538, 9, 0, 65538, 10, 0, 65538, 11, 0, 65538, 12, 0, 65538, 13, 0, 6, 14, 0, 2, 15, 0, 2, 16, 0, 2, 17, 0, 196617, 18, 0, 65539, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 0, 131073, 65540, 0, 131074, 65541, 0, 131074, 65542, 0, 131074, 65543, 0, 131074, 65544, 0, 131074, 65545, 0, 131074, 65546, 0, 131074, 65547, 0, 131074, 65548, 0, 131074, 65549, 0, 131075, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 0, 131073, 65554, 0, 131075, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 0, 131073, 131076, 0, 131074, 131077, 0, 131074, 131078, 0, 131074, 131079, 0, 131074, 131080, 0, 131074, 131081, 0, 131074, 131082, 0, 131074, 131083, 0, 131074, 131084, 0, 131074, 131085, 0, 131075, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 0, 131073, 131090, 0, 131075, 196608, 0, 65537, 196609, 0, 65538, 196610, 0, 65538, 196611, 0, 65547, 196612, 0, 131074, 196613, 0, 131082, 196614, 0, 196610, 196615, 0, 196610, 196616, 0, 196610, 196617, 0, 196610, 196618, 0, 196610, 196619, 0, 196610, 196620, 0, 196610, 196621, 0, 196611, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 0, 131073, 196626, 0, 131075, 262144, 0, 131073, 262145, 0, 131074, 262146, 0, 131074, 262147, 0, 131074, 262148, 0, 131074, 262149, 0, 131075, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 0, 131073, 262162, 0, 131075, 327680, 0, 131073, 327681, 0, 131074, 327682, 0, 131074, 327683, 0, 131074, 327684, 0, 131074, 327685, 0, 131075, 327686, 1, 0, 327687, 0, 65537, 327688, 0, 65538, 327689, 0, 65538, 327690, 0, 65538, 327691, 0, 65538, 327692, 0, 6, 327693, 0, 2, 327694, 0, 2, 327695, 0, 65542, 327696, 1, 0, 327697, 0, 131073, 327698, 0, 131075, 393216, 0, 131073, 393217, 0, 131074, 393218, 0, 131074, 393219, 0, 131074, 393220, 0, 131074, 393221, 0, 131075, 393222, 1, 0, 393223, 0, 131073, 393224, 0, 131074, 393225, 0, 131074, 393226, 0, 131074, 393227, 0, 131074, 393228, 0, 131075, 393229, 1, 0, 393230, 1, 0, 393231, 0, 196608, 393232, 1, 0, 393233, 0, 196609, 393234, 0, 4, 458752, 0, 7, 458753, 0, 196610, 458754, 0, 196610, 458755, 0, 8, 458756, 0, 196610, 458757, 0, 4, 458758, 1, 0, 458759, 0, 131073, 458760, 0, 131082, 458761, 0, 196610, 458762, 0, 196610, 458763, 0, 196610, 458764, 0, 9, 458765, 0, 65539, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 0, 131072, 524288, 0, 131072, 524289, 1, 0, 524290, 1, 0, 524291, 0, 131072, 524292, 1, 0, 524293, 0, 131072, 524294, 1, 0, 524295, 0, 131073, 524296, 0, 131075, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 0, 131073, 524301, 0, 131083, 524302, 0, 65538, 524303, 0, 65538, 524304, 0, 65539, 524305, 1, 0, 524306, 0, 131072, 589824, 0, 131072, 589825, 1, 0, 589826, 1, 0, 589827, 0, 196608, 589828, 1, 0, 589829, 0, 196608, 589830, 1, 0, 589831, 0, 196609, 589832, 0, 196611, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 0, 131073, 589837, 0, 131074, 589838, 0, 131074, 589839, 0, 131074, 589840, 0, 131075, 589841, 1, 0, 589842, 0, 131072, 655360, 0, 131072, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 0, 131073, 655373, 0, 131074, 655374, 0, 131074, 655375, 0, 131074, 655376, 0, 131083, 655377, 0, 65538, 655378, 0, 196615, 720896, 0, 196612, 720897, 0, 2, 720898, 0, 2, 720899, 0, 2, 720900, 0, 2, 720901, 0, 2, 720902, 0, 2, 720903, 0, 2, 720904, 0, 2, 720905, 0, 2, 720906, 0, 2, 720907, 0, 2, 720908, 0, 196616, 720909, 0, 196610, 720910, 0, 196610, 720911, 0, 196610, 720912, 0, 196610, 720913, 0, 196610, 720914, 0, 196611 )

[node name="PyramidLevel2" parent="." instance=ExtResource( 10 )]
levelIndex = 2

[node name="Layout" parent="PyramidLevel2" index="0"]
tile_data = PoolIntArray( -65538, 0, 65537, -65537, 0, 6, -131072, 0, 2, -131071, 0, 2, -131070, 0, 2, -131069, 0, 2, -131068, 0, 2, -131067, 0, 2, -131066, 0, 2, -131065, 0, 2, -131064, 0, 2, -131063, 0, 2, -131062, 0, 2, -131061, 0, 2, -131060, 0, 2, -131059, 0, 2, -131058, 0, 2, -131057, 0, 2, -131056, 0, 2, -131055, 0, 2, -131054, 0, 2, -131053, 0, 2, -131052, 0, 65542, -2, 0, 131073, -1, 0, 131075, -65536, 1, 0, -65535, 1, 0, -65534, 1, 0, -65533, 1, 0, -65532, 1, 0, -65531, 1, 0, -65530, 1, 0, -65529, 1, 0, -65528, 1, 0, -65527, 1, 0, -65526, 1, 0, -65525, 1, 0, -65524, 1, 0, -65523, 1, 0, -65522, 1, 0, -65521, 1, 0, -65520, 1, 0, -65519, 1, 0, -65518, 1, 0, -65517, 1, 0, -65516, 0, 131072, 65534, 0, 131073, 65535, 0, 131083, 0, 0, 65538, 1, 0, 65538, 2, 0, 65538, 3, 0, 65538, 4, 0, 65538, 5, 0, 65538, 6, 0, 65538, 7, 0, 65538, 8, 0, 65539, 9, 1, 0, 10, 0, 1, 11, 0, 2, 12, 0, 196617, 13, 0, 65538, 14, 0, 65538, 15, 0, 65538, 16, 0, 65538, 17, 0, 65538, 18, 0, 65538, 19, 0, 65538, 20, 0, 196615, 131070, 0, 131073, 131071, 0, 131082, 65536, 0, 196610, 65537, 0, 196610, 65538, 0, 196610, 65539, 0, 196610, 65540, 0, 196610, 65541, 0, 196610, 65542, 0, 196610, 65543, 0, 196610, 65544, 0, 196611, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 0, 196609, 65549, 0, 196610, 65550, 0, 196610, 65551, 0, 11, 65552, 0, 131074, 65553, 0, 131074, 65554, 0, 131074, 65555, 0, 131074, 65556, 0, 131075, 196606, 0, 131073, 196607, 0, 131075, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 0, 131073, 131088, 0, 131082, 131089, 0, 196610, 131090, 0, 11, 131091, 0, 131074, 131092, 0, 131075, 262142, 0, 131073, 262143, 0, 131083, 196608, 0, 65538, 196609, 0, 65538, 196610, 0, 65538, 196611, 0, 65538, 196612, 0, 65538, 196613, 0, 65539, 196614, 1, 0, 196615, 0, 65537, 196616, 0, 65539, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 0, 65537, 196621, 0, 65539, 196622, 1, 0, 196623, 0, 131073, 196624, 0, 131075, 196625, 1, 0, 196626, 0, 131073, 196627, 0, 131074, 196628, 0, 131075, 327678, 0, 131073, 327679, 0, 131074, 262144, 0, 131074, 262145, 0, 131074, 262146, 0, 131074, 262147, 0, 131074, 262148, 0, 131074, 262149, 0, 131075, 262150, 1, 0, 262151, 0, 131073, 262152, 0, 131083, 262153, 0, 65538, 262154, 0, 65538, 262155, 0, 65538, 262156, 0, 65547, 262157, 0, 131075, 262158, 1, 0, 262159, 0, 131073, 262160, 0, 131075, 262161, 1, 0, 262162, 0, 131073, 262163, 0, 131074, 262164, 0, 131075, 393214, 0, 131073, 393215, 0, 131082, 327680, 0, 196610, 327681, 0, 196610, 327682, 0, 196610, 327683, 0, 196610, 327684, 0, 196610, 327685, 0, 196611, 327686, 1, 0, 327687, 0, 7, 327688, 0, 196610, 327689, 0, 196610, 327690, 0, 196610, 327691, 0, 196610, 327692, 0, 196610, 327693, 0, 196611, 327694, 1, 0, 327695, 0, 196609, 327696, 0, 196611, 327697, 1, 0, 327698, 0, 131073, 327699, 0, 131074, 327700, 0, 131075, 458750, 0, 131073, 458751, 0, 131075, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 0, 131072, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 0, 131073, 393235, 0, 131074, 393236, 0, 131075, 524286, 0, 131073, 524287, 0, 131083, 458752, 0, 65538, 458753, 0, 65538, 458754, 0, 65538, 458755, 0, 65538, 458756, 0, 65538, 458757, 0, 65539, 458758, 1, 0, 458759, 0, 196618, 458760, 0, 6, 458761, 0, 2, 458762, 0, 2, 458763, 0, 2, 458764, 0, 196617, 458765, 0, 65538, 458766, 0, 65538, 458767, 0, 65538, 458768, 0, 65539, 458769, 1, 0, 458770, 0, 131073, 458771, 0, 131074, 458772, 0, 131075, 589822, 0, 131073, 589823, 0, 131082, 524288, 0, 196610, 524289, 0, 196610, 524290, 0, 196610, 524291, 0, 196610, 524292, 0, 196610, 524293, 0, 196611, 524294, 1, 0, 524295, 0, 131073, 524296, 0, 131075, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 0, 196609, 524301, 0, 196610, 524302, 0, 11, 524303, 0, 131074, 524304, 0, 131075, 524305, 1, 0, 524306, 0, 131073, 524307, 0, 131074, 524308, 0, 131075, 655358, 0, 131073, 655359, 0, 131075, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 0, 131073, 589832, 0, 131075, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 0, 196609, 589839, 0, 11, 589840, 0, 131075, 589841, 1, 0, 589842, 0, 131073, 589843, 0, 131074, 589844, 0, 131075, 720894, 0, 131073, 720895, 0, 131083, 655360, 0, 65538, 655361, 0, 65538, 655362, 0, 65538, 655363, 0, 65538, 655364, 0, 65538, 655365, 0, 65539, 655366, 1, 0, 655367, 0, 131073, 655368, 0, 131075, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 0, 65536, 655373, 1, 0, 655374, 1, 0, 655375, 0, 196609, 655376, 0, 196611, 655377, 1, 0, 655378, 0, 131073, 655379, 0, 131074, 655380, 0, 131075, 786430, 0, 131073, 786431, 0, 131082, 720896, 0, 196610, 720897, 0, 196610, 720898, 0, 196610, 720899, 0, 196610, 720900, 0, 196610, 720901, 0, 196611, 720902, 1, 0, 720903, 0, 196609, 720904, 0, 5, 720905, 0, 3, 720906, 1, 0, 720907, 0, 65537, 720908, 0, 65546, 720909, 0, 65539, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 0, 131073, 720915, 0, 131074, 720916, 0, 131075, 851966, 0, 131073, 851967, 0, 131075, 786432, 1, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 0, 131073, 786444, 0, 131074, 786445, 0, 131083, 786446, 0, 65538, 786447, 0, 65538, 786448, 0, 65538, 786449, 0, 65538, 786450, 0, 65547, 786451, 0, 131074, 786452, 0, 131075, 917502, 0, 196609, 917503, 0, 5, 851968, 0, 2, 851969, 0, 2, 851970, 0, 2, 851971, 0, 2, 851972, 0, 2, 851973, 0, 2, 851974, 0, 2, 851975, 0, 2, 851976, 0, 2, 851977, 0, 2, 851978, 0, 2, 851979, 0, 196616, 851980, 0, 196610, 851981, 0, 196610, 851982, 0, 196610, 851983, 0, 196610, 851984, 0, 196610, 851985, 0, 196610, 851986, 0, 196610, 851987, 0, 196610, 851988, 0, 196611 )

[node name="TreasureChamber" parent="PyramidLevel2" index="1"]
position = Vector2( 2625, 625 )

[node name="Player" parent="." groups=[
"Player",
] instance=ExtResource( 12 )]
position = Vector2( 2625, 2375 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" parent="UILayer" instance=ExtResource( 13 )]

[node name="WaveScreen" type="TextureRect" parent="UILayer" groups=[
"WaveScreen",
]]
pause_mode = 2
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 8 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="UILayer/WaveScreen"]
pause_mode = 1
margin_right = 40.0
margin_bottom = 40.0

[node name="EnemyInfo" parent="UILayer" instance=ExtResource( 11 )]
visible = false

[node name="Textbox" type="TextureRect" parent="UILayer" groups=[
"Textbox",
]]
pause_mode = 2
visible = false
margin_left = 460.0
margin_top = 140.0
margin_right = 1460.0
margin_bottom = 940.0
texture = ExtResource( 6 )
stretch_mode = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="UILayer/Textbox"]
margin_left = 100.0
margin_top = 100.0
margin_right = 900.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 5 )
text = "Oh, these pesky mortals are at it again. How dare they disturb ye, oh mighty pharaoh?
Float around using WASD and investigate outside of your pyramid.
"
align = 1
valign = 1
autowrap = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.34, 0.34, 0.34, 1 )

[node name="CurrentItemPreview" type="Sprite" parent="."]
visible = false
z_index = 3
script = ExtResource( 4 )

[node name="NoMoneyIndicator" type="Sprite" parent="CurrentItemPreview"]
scale = Vector2( 10, 10 )
texture = ExtResource( 7 )

[connection signal="allEnemiesDead" from="PyramidLevel0/EnemySpawner" to="." method="_on_EnemySpawner_allEnemiesDead"]
[connection signal="allEnemiesDead" from="PyramidLevel0/EnemySpawner" to="UILayer/UI" method="_on_EnemySpawner_allEnemiesDead"]

[editable path="PyramidLevel0"]
[editable path="PyramidLevel1"]
[editable path="PyramidLevel2"]
